lib_LTLIBRARIES = libclan22RegExp.la

libclan22RegExp_la_SOURCES = \
precomp.cpp \
regexp.cpp \
regexp_match.cpp

libclan22RegExp_la_LDFLAGS = \
  -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) $(LDFLAGS_LT_RELEASE) \
  $(extra_LIBS_RegExp)

libclan22Sound_la_CXXFLAGS=$(RegExp_CXXFLAGS) $(extra_CFLAGS_RegExp)

# EOF #
