lib_LTLIBRARIES = libclanSDL.la

libclanSDL_la_SOURCES = \
sdl_display_window_provider.cpp \
sdl_display_window_provider.h \
sdl_element_array_buffer_provider.cpp \
sdl_element_array_buffer_provider.h \
sdl_frame_buffer_provider.cpp \
sdl_frame_buffer_provider.h \
sdl_graphic_context_provider.cpp \
sdl_graphic_context_provider.h \
sdl_input_device_provider.cpp \
sdl_input_device_provider.h \
sdl_occlusion_query_provider.cpp \
sdl_occlusion_query_provider.h \
sdl_program_object_provider.cpp \
sdl_program_object_provider.h \
sdl_render_buffer_provider.cpp \
sdl_render_buffer_provider.h \
sdl_shader_object_provider.cpp \
sdl_shader_object_provider.h \
sdl_target.cpp \
sdl_target_provider.cpp \
sdl_target_provider.h \
sdl_texture_provider.cpp \
sdl_texture_provider.h \
sdl_vertex_array_buffer_provider.cpp \
sdl_vertex_array_buffer_provider.h \
precomp.cpp \
precomp.h \
sdl_window.cpp \
sdl_window.h \
display_message_queue_sdl.cpp \
display_message_queue_sdl.h \
input_device_provider_sdljoystick.cpp \
input_device_provider_sdlkeyboard.cpp \
input_device_provider_sdlmouse.cpp \
input_device_provider_sdljoystick.h \
input_device_provider_sdlkeyboard.h \
input_device_provider_sdlmouse.h \
cursor_provider_sdl.cpp \
cursor_provider_sdl.h \
vertex_attribute_fetcher.h \
setup_sdl.cpp 

libclanSDL_la_LDFLAGS = \
  -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) $(LDFLAGS_LT_RELEASE)

# EOF #

