lib_LTLIBRARIES = libclan30Scene3D.la

libclan30Scene3D_la_SOURCES = \
	precomp.cpp

libclan30Scene3D_la_LDFLAGS = \
  -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) $(LDFLAGS_LT_RELEASE) \
  $(extra_LIBS_clanScene3D)

libclan30Scene3D_la_CXXFLAGS=$(clanScene3D_CXXFLAGS) $(extra_CFLAGS_clanScene3D)
# EOF #

